[package]
name = "tinysys-rs-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
tinysys_sys = { git = "https://github.com/Chris--B/tinysys-sys.git" }
riscv = { version = "0.13.0", features = ["critical-section-single-hart"] }
embedded-alloc = "0.6.0"
panic-halt = "1"
micromath = "2"

[[bin]]
name = "tinysys-rs-playground"
path = "src/main.rs"
test = false
doctest = false
bench = false
